--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-safe-area-view": "^1.1.1"
+    "react-native-safe-area-view": "^1.1.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
