--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@styled-icons/octicons": "^10.44.0",
     "axios": "^0.22.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
